[package]
name = "deltasaver"
description = "Manage DELTARUNE saves"
authors = ["Ethan Uppal"]
version = "0.1.0"
edition = "2024"
license-file = "LICENSE"

[dependencies]
iced = { version = "0.13.1", features = ["highlighter", "tokio", "debug"] }
tokio = { version = "1.46.0", features = ["fs"] }
rfd = "0.13"
dirs = "6.0.0"
sha2 = "0.10.9"

[package.metadata.bundle]
name = "DELTASAVER"
identifier = "com.ethanuppal.deltasaver"
copyright = "Copyright (C) Ethan Uppal. All rights reserved."
short_description = "Manage DELTARUNE saves."
